feat: 타학과 전공 분류 예외 정책 반영